tried to fix layout shifts but can't seem to find to fix it

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -100,7 +100,7 @@ nav a:hover {
 .footer {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: minmax(90px auto);
+    grid-auto-rows: minmax(90px, auto);
     font-size: var(--body-font-size);
     padding: 2rem;
     text-align: center;
